--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,2 +1,7 @@
 <!-- <p *ngFor="let task of tasks">{{task.text}}</p> -->  <!-- esto toma las tareas que hay en el archivo mock-taskk.ts  -->
-<app-tasks-items *ngFor="let task of tasks" [task]="task" (onDeleteTask) = "deleteTask(task)"></app-tasks-items>
+<app-tasks-items *ngFor="let task of tasks" 
+    [task]="task" 
+    (onDeleteTask) = "deleteTask(task)"
+    (onToggleReminder)="toggleReminder(task)"
+>
+</app-tasks-items>
