--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,1 +1,20 @@
-<p>add-task works!</p>
+<form class="add-form" (ngSubmit)="onSubmit()">
+    <div class="form-control">
+        <label for="text">Task</label>
+        <input type="text" name="text" id="text" placeholder="Add Task Text" [(ngModel)]="text">
+
+    </div>
+    <div class="form-control">
+        <label for="day">Day & Time</label>
+        <input type="text" name="day" id="day" placeholder="Add Day & time" [(ngModel)]="day">
+
+    </div>
+    <div class="form-control form-control-check">
+        <label for="reminder">Reminder</label>
+        <input type="checkbox" name="reminder" id="reminder"  [(ngModel)]="reminder">
+
+    </div>
+    <!-- {{text}}{{day}}{{reminder}} habilitar estos dobles bindings para verificar que los ngmodel estan afectando al controlador y se están visualizando -->
+    <input type="submit" value="Save Task" class="btn btn-block">
+
+</form>
