--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,4 +1,5 @@
 <!-- <p *ngFor="let task of tasks">{{task.text}}</p> -->  <!-- esto toma las tareas que hay en el archivo mock-taskk.ts  -->
+<app-add-task (onAddTask)="addTask($event)"></app-add-task>
 <app-tasks-items *ngFor="let task of tasks" 
     [task]="task" 
     (onDeleteTask) = "deleteTask(task)"
